--- a/hitcher/web/index.html
+++ b/hitcher/web/index.html
@@ -1,4 +1,4 @@
-<%@ page contentType="text/html;charset=UTF-8"%>
+<!--<%@ page contentType="text/html;charset=UTF-8"%>-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="${pageContext.request.contextPath}/jsp/sign-in.jsp">Sign in</a>
+                    <a class="nav-link js-scroll-trigger" data-target="#sign-in" data-toggle="modal" href="javascript:void(0)">Sign in</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="${pageContext.request.contextPath}/jsp/register.jsp">Register</a>
@@ -109,6 +109,25 @@
     </div>
     <!-- /.container -->
 </footer>
+
+<!-- The Modal -->
+<div class="modal fade" id="sign-in">
+    <div class="modal-dialog">
+        <div class="modal-content">
+
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <h4 class="modal-title">Modal Heading</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+
+            <!-- Modal body -->
+            <div class="modal-body">
+                Modal body..
+            </div>
+        </div>
+    </div>
+</div>
 
 <!-- Bootstrap core JavaScript -->
 <script src="vendor/jquery/jquery.min.js"></script>
