--- a/hitcher/web/jsp/register.html
+++ b/hitcher/web/jsp/register.html
@@ -1,4 +1,4 @@
-<%@ page contentType="text/html;charset=UTF-8" %>
+<!--<%@ page contentType="text/html;charset=UTF-8" %>-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -48,7 +48,7 @@
 
                         <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Register</button>
                         <a class="d-block text-center mt-2 small"
-                           href="${pageContext.request.contextPath}/jsp/sign-in.jsp">Sign In</a>
+                           href="${pageContext.request.contextPath}/jsp/sign-in.html">Sign In</a>
                         <hr class="my-4">
 <%--                        <button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i
                                 class="fab fa-google mr-2"></i> Sign up with Google
