moved to another directory

--- a/hitcher/web/WEB-INF/jsp/sign-in.html
+++ b/hitcher/web/WEB-INF/jsp/sign-in.html
@@ -5,8 +5,8 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Sign In</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="../css/sign-in.css" rel="stylesheet">
-    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../css/index.css" rel="stylesheet">
+    <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
@@ -39,7 +39,8 @@
                                         type="submit">Sign in
                                 </button>
                                 <div class="text-center">
-                                    <a class="small" href="#">Forgot password?</a></div>
+                                    <a class="small" href="#">Forgot password?</a>
+                                </div>
                             </form>
                         </div>
                     </div>
@@ -49,8 +50,8 @@
     </div>
 </div>
 
-<script src="../vendor/jquery/jquery.slim.js"></script>
-<script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="../../vendor/jquery/jquery.slim.js"></script>
+<script src="../../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
