--- a/hitcher/web/WEB-INF/jsp/register.html
+++ b/hitcher/web/WEB-INF/jsp/register.html
@@ -5,9 +5,9 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Register</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="../css/register.css" rel="stylesheet">
-    <link href="../css/all.css" rel="stylesheet">
-    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../css/register.css" rel="stylesheet">
+    <link href="../../css/all.css" rel="stylesheet">
+    <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
@@ -63,8 +63,8 @@
     </div>
 </div>
 
-<script src="../vendor/jquery/jquery.slim.js"></script>
-<script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="../../vendor/jquery/jquery.slim.js"></script>
+<script src="../../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
