--- a/hitcher/web/WEB-INF/jsp/navbar.html
+++ b/hitcher/web/WEB-INF/jsp/navbar.html
@@ -29,3 +29,106 @@
         </div>
     </div>
 </nav>
+
+<!-- The Login Modal -->
+<div class="modal fade" id="sign-in">
+    <div class="modal-dialog">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h4 class="modal-title">Welcome back!</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+
+            <div class="modal-body">
+                <div class="login d-flex align-items-center py-5">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-12 mx-auto">
+                                <form>
+                                    <div class="form-label-group">
+                                        <input type="text" id="inputLoginUsername" class="form-control" placeholder="Username" name="login"
+                                               required autofocus>
+                                        <label for="inputLoginUsername">Username</label>
+                                    </div>
+
+                                    <div class="form-label-group">
+                                        <input type="password" id="inputLoginPassword" class="form-control" name="pass"
+                                               placeholder="Password" required>
+                                        <label for="inputLoginPassword">Password</label>
+                                    </div>
+
+                                    <div class="custom-control custom-checkbox mb-3">
+                                        <input type="checkbox" class="custom-control-input" id="customCheck1">
+                                        <label class="custom-control-label" for="customCheck1">Remember password</label>
+                                    </div>
+                                    <button class="btn btn-lg btn-primary btn-block btn-login text-uppercase font-weight-bold mb-2"
+                                            type="submit">Sign in
+                                    </button>
+                                    <div class="text-center">
+                                        <a class="small" href="#">Forgot password?</a>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- The Register Modal -->
+<div class="modal fade" id="register">
+    <div class="modal-dialog">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h4 class="modal-title">Register</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+
+            <div class="modal-body">
+                <div class="login d-flex align-items-center py-5">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-12 mx-auto">
+                                <form>
+                                    <div class="form-label-group">
+                                        <input type="text" id="inputRegisterUsername" class="form-control" placeholder="Username"
+                                               required autofocus>
+                                        <label for="inputRegisterUsername">Username</label>
+                                    </div>
+
+                                    <div class="form-label-group">
+                                        <input type="email" id="inputRegisterEmail" class="form-control" placeholder="Email address"
+                                               required>
+                                        <label for="inputRegisterEmail">Email address</label>
+                                    </div>
+
+                                    <hr>
+
+                                    <div class="form-label-group">
+                                        <input type="password" id="inputRegisterPassword" class="form-control" placeholder="Password"
+                                               required>
+                                        <label for="inputRegisterPassword">Password</label>
+                                    </div>
+
+                                    <div class="form-label-group">
+                                        <input type="password" id="inputConfirmPassword" class="form-control" placeholder="Password"
+                                               required>
+                                        <label for="inputConfirmPassword">Confirm password</label>
+                                    </div>
+                                    <button class="btn btn-lg btn-primary btn-block btn-login text-uppercase font-weight-bold mb-2"
+                                            type="submit">Register
+                                    </button>
+                                    <a class="d-block text-center mt-2 small" data-target="#sign-in" data-toggle="modal" data-dismiss="modal" href="#">Sign In</a>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
